<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Please ensure dog collar within bluetooth range</string>
    <string name="app_name">CanineCare</string>
    <string name="title_activity_main_page">CanineCare</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Fitness</string>
    <string name="title_section2">Home</string>
    <string name="title_section3">Diet</string>
    <string name="click_me">Back</string>
    <string name="fitness">Fitness Report</string>
    <string name="food">Diet Report</string>
    <string name="button_activity">ACTIVITY</string>
    <string name="button_food">FOOD</string>
    <string name="health_score">88</string>
    <string name="health_score_total">/100</string>
    <string name="health_score_title">HEALTH SCORE</string>
    <string name="dog_name">Molly</string>
    <string name="generate_report">Generate Fitness Report</string>
    <string name="refresh_steps">Refresh Steps</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pedo_steps_title">STEPS TODAY</string>
    <string name="activity_data_button">Open Activity Data</string>
    <string name="food_data_button">Open Food Data</string>
    <string name="Steps">Steps</string>
    <string name="Send">S</string>
    <string name="time_last_fed">Time last fed: </string>
    <string name="bowl_weight_title">TIME LAST FED</string>
    <string name="amount_last_fed">Amount last fed: </string>
    <string name="bowl_weight">Weight </string>
    <string name="radio_food">Food</string>
    <string name="radio_activity">Activity</string>
    <string name="btn_Send">Send</string>
    <string name="radio_both">Both</string>
    <string name="Send_Data">Select Data To Send</string>
    <string name="insert_email">Send to (enter e-mail):</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_food_graph">FoodGraph</string>
    <string name="title_activity_food_data">FoodData</string>
    <string name="title_activity_activity_data">ActivityData</string>

</resources>