<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainPage$DummySectionFragment" >
    <RelativeLayout 
        android:layout_width="fill_parent"
    	android:layout_height="0dip"
    	android:layout_weight="0.3">

    	<ImageView
    	    android:id="@+id/myImageView"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent"
    	    android:contentDescription="@string/click_me"
    	    android:scaleType="centerCrop"
    	    android:src="@drawable/dog" />

    	<TextView
    	    android:id="@+id/health_score_denom"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignTop="@+id/myImageView"
	        android:layout_alignRight="@+id/myImageView"
	        android:layout_alignBottom="@+id/myImageView"
	        android:gravity="bottom"
    	    android:layout_marginRight="10dp"
    	    android:layout_marginBottom="10dp"
    	    android:text="@string/health_score_total"
    	    android:textColor="#ffffff"
    	    android:textSize="12sp" />

    	<TextView
    	    android:id="@+id/score"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignBaseline="@+id/health_score_denom"
    	    android:layout_alignBottom="@+id/health_score_denom"
    	    android:layout_toLeftOf="@+id/health_score_denom"
    	    android:gravity="right"
    	    android:text="@string/health_score"
    	    android:textColor="#ffffff"
    	    android:textSize="50sp" />

    	<TextView
    	    android:id="@+id/health_score_title"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignBaseline="@+id/score"
    	    android:layout_alignBottom="@+id/score"
    	    android:layout_toLeftOf="@+id/score"
    	    android:gravity="bottom"
    	    android:text="@string/health_score_title"
    	    android:textColor="#00ffff"
    	    android:textSize="12sp" />

    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="0dip"
    	android:layout_weight="0.7">
        <ImageButton
	        android:id="@+id/button_activity"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:background="?android:attr/selectableItemBackground"
	        android:onClick="respondToMainActivityButton"
	        android:text="@string/button_activity"
	        android:src="@drawable/icon"
	        />
    	<ImageButton
	        android:id="@+id/button_food"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:background="?android:attr/selectableItemBackground"
	        android:onClick="respondToMainFoodButton"
	        android:text="@string/button_food" 
	        android:src="@drawable/icon"
	        />

    	

    </LinearLayout>
    
    
</LinearLayout>