<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainPage$DummySectionFragment" >
    
    <RelativeLayout 
        android:layout_width="fill_parent"
    	android:layout_height="0dip"
    	android:layout_weight="0.3">
    
        <ImageView
    	    android:id="@+id/myImageView"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent"
    	    android:contentDescription="@string/click_me"
    	    android:scaleType="centerCrop"
    	    android:src="@drawable/dog" />
        
	    <ImageButton
    	    android:id="@+id/refresh_last_fed_button"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentRight="true"
    	    android:layout_alignParentTop="true"
    	    android:layout_margin="5dp"
    	    android:background="?android:attr/selectableItemBackground"
    	    android:onClick="respondToRefreshLastFedButton"
    	    android:src="@drawable/ic_menu_refresh" />
	    
	    <TextView
	        android:id="@+id/bowl_weight"
	        android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignTop="@+id/myImageView"
	        android:layout_alignRight="@+id/myImageView"
	        android:layout_alignBottom="@+id/myImageView"
	        android:gravity="bottom"
	        android:layout_marginLeft="5dp"
    	    android:layout_marginRight="10dp"
    	    android:layout_marginBottom="10dp"
    	    android:text="@string/bowl_weight"
    	    android:textColor="#ffffff"
    	    android:textSize="40sp" />
	    
	    
	    <TextView
    	    android:id="@+id/bowl_weight_title"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignBaseline="@+id/bowl_weight"
    	    android:layout_alignBottom="@+id/bowl_weight"
    	    android:layout_toLeftOf="@+id/bowl_weight"
    	    android:gravity="right"
    	    android:text="@string/bowl_weight_title"
    	    android:textColor="#00ffff"
    	    android:textSize="12sp" />
	    
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
    	android:layout_height="0dip"
    	android:layout_weight="0.7">
	    
        <ImageButton
    	    android:id="@+id/foodImageButton"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent"
    	    android:contentDescription="@string/click_me"
    	    android:scaleType="centerCrop"
    	    android:src="@drawable/food_page_0" 
    	    android:onClick="respondToFoodImageButton"
    	    />
        
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginBottom="23dp"
	        android:onClick="respondToFoodButton"
	        android:text="@string/food" />
	    
    </RelativeLayout>

</LinearLayout>